--- a/frontend-nanodegree-arcade-game-master/index.html
+++ b/frontend-nanodegree-arcade-game-master/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div id="levels">
+	<div id="banner">
 		<div>Score: <span id="score">0</span>/5</div>
 		<div>Lives: <span id="lives">3</span>/3</div>
 	</div>
